<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_tools</name>
  <version>0.0.0</version>
  <description>Packages for working with pointclouds</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pointcloud_fuse</exec_depend>
  <exec_depend>sonar_pointcloud</exec_depend>

  <export>
  </export>
</package>
